# yfinance-mcp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MEMORY.md  Makefile  README.md  demo.py  pyproject.toml
.codex/: config.toml
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml  docker.yml  python.yml  release.yml
docs/plans/archived/: 2026-07-04_fix-screen-count-parameter-plan.md  2026-07-07_price-history-raise-errors-plan.md
scripts/: generate_sample_chart.py
src/yfmcp/: chart.py  screener.py  server.py  types.py  utils.py
tests/: test_chart.py  test_screener.py  test_server.py  test_server_unit.py
